# HW9_Scrapy

./: authors.json  main.py  pyproject.toml
